--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,13 @@
     "strict": true,
     "allowJs": true,
     "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "@/*": ["./app/*"]
     },
 
     // Remix takes care of building everything in `remix build`.
