--- a/package.json
+++ b/package.json
@@ -6,31 +6,66 @@
   "scripts": {
     "build": "remix build",
     "dev": "remix dev --manual",
+    "devpm2": "pm2 start bun --name \"my-remix-app\" -- run remix dev --manual",
+    "stop": "pm2 stop my-remix-app",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "db:push": "drizzle-kit push:pg",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@remix-run/css-bundle": "^2.8.0",
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
+    "@tanstack/react-form": "^0.13.7",
+    "@tanstack/zod-form-adapter": "^0.13.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "drizzle-orm": "^0.29.5",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.344.0",
+    "papaparse": "^5.4.1",
+    "postgres": "^3.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-dropzone-esm": "^15.0.1",
+    "react-icons": "^5.0.1",
+    "remix-themes": "^1.3.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4",
+    "zodix": "^0.4.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.0",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "latest",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "pg": "^8.11.3",
+    "pm2": "^5.3.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwind": "^2.2.12",
+    "tailwindcss": "latest",
     "typescript": "^5.1.6"
   },
   "engines": {
