--- a/package.json
+++ b/package.json
@@ -15,23 +15,33 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@remix-run/css-bundle": "^2.8.0",
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
     "@tanstack/react-form": "^0.13.7",
     "@tanstack/zod-form-adapter": "^0.13.7",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.5",
     "isbot": "^4.1.0",
+    "jotai": "^2.7.0",
     "lucide-react": "^0.344.0",
     "papaparse": "^5.4.1",
     "postgres": "^3.4.3",
@@ -39,8 +49,10 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-dropzone-esm": "^15.0.1",
+    "react-email-editor": "^1.7.9",
     "react-icons": "^5.0.1",
     "remix-themes": "^1.3.1",
+    "remix-utils": "^7.5.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
