--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc",
     "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "cf:deploy": "wrangler deploy",
+    "cf:dev": "wrangler dev",
+    "cf:start": "wrangler dev"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@conform-to/react": "^1.0.4",
+    "@conform-to/zod": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -26,6 +31,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@remix-run/css-bundle": "^2.8.0",
@@ -33,16 +39,25 @@
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
     "@tanstack/react-form": "^0.13.7",
+    "@tanstack/react-query": "^4.36.1",
     "@tanstack/zod-form-adapter": "^0.13.7",
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.5",
     "isbot": "^4.1.0",
     "jotai": "^2.7.0",
     "lucide-react": "^0.344.0",
+    "mel-spintax": "^1.0.4",
+    "next-themes": "^0.2.1",
+    "node-cron": "^3.0.3",
+    "node-spintax": "^1.0.4",
+    "nodemailer": "^6.9.12",
     "papaparse": "^5.4.1",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
@@ -53,18 +68,26 @@
     "react-icons": "^5.0.1",
     "remix-themes": "^1.3.1",
     "remix-utils": "^7.5.0",
+    "sonner": "^1.4.3",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.22.4",
     "zodix": "^0.4.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240312.0",
     "@remix-run/dev": "^2.8.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/papaparse": "^5.3.14",
+    "@types/pg": "^8.11.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "@vercel/node": "^3.0.22",
     "autoprefixer": "latest",
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.38.0",
@@ -76,8 +99,10 @@
     "pg": "^8.11.3",
     "pm2": "^5.3.1",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "latest",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "wrangler": "^3.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
