--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "~/*": ["./app/*"],
       "@/*": ["./app/*"]
     },
+    "types": ["@cloudflare/workers-types/2023-07-01"],
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
