--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "vanilla",
+  "name": "vite",
   "private": true,
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev --manual",
-    "devpm2": "pm2 start bun --name \"my-remix-app\" -- run remix dev --manual",
-    "stop": "pm2 stop my-remix-app",
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/index.js",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-    "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio",
-    "cf:deploy": "wrangler deploy",
-    "cf:dev": "wrangler dev",
-    "cf:start": "wrangler dev"
+        "db:push": "drizzle-kit push:pg",
+    "db:studio": "drizzle-kit studio"
+
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+        "@ckeditor/ckeditor5-build-classic": "^41.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
@@ -77,18 +73,18 @@
     "zodix": "^0.4.4"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240312.0",
-    "@remix-run/dev": "^2.8.0",
+    "@remix-run/dev": "^2.8.1",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/papaparse": "^5.3.14",
     "@types/pg": "^8.11.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@vercel/node": "^3.0.22",
-    "autoprefixer": "latest",
+
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -102,7 +98,9 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "latest",
     "typescript": "^5.1.6",
-    "wrangler": "^3.0.0"
+    "wrangler": "^3.0.0",
+    "vite": "^5.1.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "engines": {
     "node": ">=18.0.0"
