--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
+    "cf:build": "remix vite:build",
+    "cf:deploy": "wrangler pages deploy ./build/client",
+    "cf:start": "wrangler pages dev ./build/client",
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-        "db:push": "drizzle-kit push:pg",
+    "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio"
-
   },
   "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@remix-run/cloudflare": "^2.8.1",
+    "@remix-run/cloudflare-pages": "^2.8.1",
+    "miniflare": "^3.20231030.4",
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
@@ -73,6 +78,7 @@
     "zodix": "^0.4.4"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20230518.0",
     "@remix-run/dev": "^2.8.1",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
@@ -80,11 +86,9 @@
     "@types/pg": "^8.11.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@vercel/node": "^3.0.22",
-
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -98,9 +102,9 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "latest",
     "typescript": "^5.1.6",
-    "wrangler": "^3.0.0",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.24.0"
   },
   "engines": {
     "node": ">=18.0.0"
