--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
-        "db:push": "drizzle-kit push:pg",
+    "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio"
-
   },
   "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^41.2.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
@@ -43,6 +42,7 @@
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@vercel/remix": "^2.8.1-patch.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.5",
@@ -80,11 +80,9 @@
     "@types/pg": "^8.11.2",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
-
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@vercel/node": "^3.0.22",
-
     "drizzle-kit": "^0.20.14",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
