--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "drizzle-orm": "^0.29.5",
     "isbot": "^4.1.0",
     "jotai": "^2.7.0",
+    "jsdom": "^24.0.0",
     "lucide-react": "^0.344.0",
     "mel-spintax": "^1.0.4",
     "next-themes": "^0.2.1",
