--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/jsdom": "^21.1.6",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
     "@types/papaparse": "^5.3.14",
@@ -97,9 +98,9 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "latest",
     "typescript": "^5.1.6",
-    "wrangler": "^3.0.0",
     "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.2.1",
+    "wrangler": "^3.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
