--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -50,12 +51,14 @@
     "isbot": "^4.1.0",
     "jotai": "^2.7.0",
     "jsdom": "^24.0.0",
+    "lucia": "^3.1.1",
     "lucide-react": "^0.344.0",
     "mel-spintax": "^1.0.4",
     "next-themes": "^0.2.1",
     "node-cron": "^3.0.3",
     "node-spintax": "^1.0.4",
     "nodemailer": "^6.9.12",
+    "oslo": "^1.2.0",
     "papaparse": "^5.4.1",
     "postgres": "^3.4.3",
     "react": "^18.2.0",
@@ -104,6 +107,6 @@
     "wrangler": "^3.0.0"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=20.0.0"
   }
 }
