--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@vercel/remix": "^2.8.1-patch.2",
+    "arctic": "^1.5.0",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
