--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "dev": "remix vite:dev --port 3000 --host",
     "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint ."
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
+    "@epic-web/remember": "^1.0.2",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -34,6 +35,7 @@
     "@remix-run/node": "^2.8.0",
     "@remix-run/react": "^2.8.0",
     "@remix-run/serve": "^2.8.0",
+    "@t3-oss/env-core": "^0.9.2",
     "@tanstack/react-form": "^0.13.7",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/zod-form-adapter": "^0.13.7",
@@ -49,6 +51,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.5",
+    "fast-xml-parser": "^4.3.6",
     "isbot": "^4.1.0",
     "jotai": "^2.7.0",
     "jsdom": "^24.0.0",
@@ -70,6 +73,7 @@
     "react-icons": "^5.0.1",
     "remix-themes": "^1.3.1",
     "remix-utils": "^7.5.0",
+    "simple-xml-to-json": "^1.2.0",
     "sonner": "^1.4.3",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
