--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.29.5",
     "fast-xml-parser": "^4.3.6",
     "isbot": "^4.1.0",
