--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev --port 3000 --host",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "remix-serve ./build/server/index.js --port 3000",
     "typecheck": "tsc",
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
