--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
     "@epic-web/remember": "^1.0.2",
+    "@hookform/resolvers": "^3.3.4",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
@@ -27,6 +28,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toggle": "^1.0.3",
@@ -71,6 +73,7 @@
     "react-dropzone": "^14.2.3",
     "react-dropzone-esm": "^15.0.1",
     "react-email-editor": "^1.7.9",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
     "remix-themes": "^1.3.1",
     "remix-utils": "^7.5.0",
@@ -80,7 +83,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "zod": "^3.22.4",
+    "zod": "^3.23.4",
     "zodix": "^0.4.4"
   },
   "devDependencies": {
@@ -95,7 +98,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@vercel/node": "^3.0.22",
-    "drizzle-kit": "^0.20.14",
+    "drizzle-kit": "^0.20.17",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
