--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "remix vite:dev --port 3000 --host",
     "start": "remix-serve ./build/server/index.js --port 3000",
     "typecheck": "tsc",
-    "db:push": "drizzle-kit push:pg",
+    "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint ."
   },
@@ -50,19 +50,23 @@
     "@vercel/remix": "^2.8.1-patch.2",
     "arctic": "^1.5.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
+    "dotenv-flow": "^4.1.0",
     "drizzle-orm": "^0.29.5",
     "fast-xml-parser": "^4.3.6",
     "isbot": "^4.1.0",
     "jotai": "^2.7.0",
+    "jq": "^1.7.2",
     "jsdom": "^24.0.0",
     "lucia": "^3.1.1",
     "lucide-react": "^0.344.0",
     "mel-spintax": "^1.0.4",
     "next-themes": "^0.2.1",
     "node-cron": "^3.0.3",
+    "node-jq": "^4.3.2",
     "node-spintax": "^1.0.4",
     "nodemailer": "^6.9.12",
     "oslo": "^1.2.0",
@@ -98,7 +102,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@vercel/node": "^3.0.22",
-    "drizzle-kit": "^0.20.17",
+    "drizzle-kit": "^0.21.2",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.28.1",
