--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@conform-to/zod": "^1.0.4",
     "@epic-web/remember": "^1.0.2",
     "@hookform/resolvers": "^3.3.4",
+    "@libsql/client": "^0.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
