--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
+    "api:dev": "bun run --hot ./backend/index.ts",
+    "api:start": "bun ./src/index.ts",
     "build": "remix vite:build",
     "dev": "remix vite:dev --port 3000 --host",
     "start": "remix-serve ./build/server/index.js --port 3000",
     "typecheck": "tsc",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "bun ./drizzle/+migrate.ts",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint ."
   },
   "dependencies": {
@@ -17,10 +21,12 @@
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "@conform-to/react": "^1.0.4",
     "@conform-to/zod": "^1.0.4",
+    "@dotenvx/dotenvx": "^0.44.0",
     "@epic-web/remember": "^1.0.2",
     "@hookform/resolvers": "^3.3.4",
     "@libsql/client": "^0.6.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -57,7 +63,11 @@
     "dotenv": "^16.4.5",
     "dotenv-flow": "^4.1.0",
     "drizzle-orm": "^0.29.5",
+    "express": "^4.19.2",
     "fast-xml-parser": "^4.3.6",
+    "firebase": "^10.12.1",
+    "firebase-admin": "^12.1.1",
+    "hono": "^4.3.9",
     "isbot": "^4.1.0",
     "jotai": "^2.7.0",
     "jq": "^1.7.2",
@@ -65,7 +75,6 @@
     "lucia": "^3.1.1",
     "lucide-react": "^0.344.0",
     "mel-spintax": "^1.0.4",
-    "next-themes": "^0.2.1",
     "node-cron": "^3.0.3",
     "node-jq": "^4.3.2",
     "node-spintax": "^1.0.4",
@@ -82,6 +91,7 @@
     "react-icons": "^5.0.1",
     "remix-themes": "^1.3.1",
     "remix-utils": "^7.5.0",
+    "rword": "^3.2.1",
     "simple-xml-to-json": "^1.2.0",
     "sonner": "^1.4.3",
     "superjson": "^2.2.1",
@@ -93,6 +103,8 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.8.1",
+    "@types/bun": "latest",
+    "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.6",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.14",
@@ -103,6 +115,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "@vercel/node": "^3.0.22",
+    "bun-types": "^1.1.9",
     "drizzle-kit": "^0.21.2",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
