--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "dotenv": "^16.4.5",
     "dotenv-flow": "^4.1.0",
     "drizzle-orm": "^0.29.5",
+    "esbuild": "0.17.19",
     "express": "^4.19.2",
     "fast-xml-parser": "^4.3.6",
     "firebase": "^10.12.1",
