--- a/package.json
+++ b/package.json
@@ -133,6 +133,9 @@
     "vite-tsconfig-paths": "^4.3.2",
     "wrangler": "^3.0.0"
   },
+  "overrides": {
+	    "@remix-run/server-runtime": "2.9.1"
+  },
   "engines": {
     "node": ">=20.0.0"
   }
