--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -27,6 +27,6 @@ jobs:
           git pull origin main
           npm install
           npm run build
-          npm run start &
+          npm run start & disown && exit
         EOF
 
