--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -22,12 +22,13 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           cd ${{ secrets.VPS_PATH }}
+          fnm use 20
           # Find and kill the process running npm start
           pkill -f "npm run start"
           git pull origin main
           npm install
           npm run build
-          # npm run start & disown && exit
-          npm start & npx wait-on http://localhost:3000
+          npm run start & disown && exit
+          # npm start & npx wait-on http://localhost:3000
         EOF
 
