--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -28,7 +28,7 @@ jobs:
           git pull origin main
           npm install
           npm run build
-          npm run start & disown && exit
-          # npm start & npx wait-on http://localhost:3000
+          # npm run start & disown && exit
+          npm start & npx wait-on http://localhost:3000
         EOF
 
