--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           cd ${{ secrets.VPS_PATH }}
+          source ~/.bashrc || source ~/.bash_profile || source ~/.profile
           fnm use 20
           # Find and kill the process running npm start
           pkill -f "npm run start"
