--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -29,6 +29,6 @@ jobs:
           npm install
           npm run build
           # npm run start & disown && exit
-          npm start & npx wait-on http://localhost:3000
+          npm start & bunx wait-on http://localhost:3000
         EOF
 
