--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -24,11 +24,10 @@ jobs:
           cd ${{ secrets.VPS_PATH }}
           /home/${{ secrets.VPS_USER }}/.local/share/fnm/fnm use 20
           # Find and kill the process running npm start
-          pkill -f "npm run start"
+          pkill -f "npm run app:start"
           git pull origin main
           npm install
-          npm run build
-          npm run start & disown && exit
-          # npm start & bunx wait-on http://localhost:3000
+          npm run app:build
+          nohup npm run app:start & 
         EOF
 
