--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -24,10 +24,11 @@ jobs:
           cd ${{ secrets.VPS_PATH }}
           git stash
           source /home/${{ secrets.VPS_USER }}/.bashrc 
+          source ~/.bashrc
           echo "${{secrets.SSH_PRIVATE_KEY}}"
-          alias node=/home/semere/.local/share/fnm/node-versions/v20.13.1/installation/bin/node
-          alias npm=/home/semere/.local/share/fnm/node-versions/v20.13.1/installation/bin/npm
-          alias npx=/home/semere/.local/share/fnm/node-versions/v20.13.1/installation/bin/npx
+          alias node=/home/${{secrets.VPS_USER}}/.local/share/fnm/node-versions/v20.13.1/installation/bin/node
+          alias npm=/home/${{ secrets.VPS_USER }}/.local/share/fnm/node-versions/v20.13.1/installation/bin/npm
+          alias npx=/home/${{ secrets.VPS_USER }}/.local/share/fnm/node-versions/v20.13.1/installation/bin/npx
           /home/${{ secrets.VPS_USER }}/.local/share/fnm/fnm use 20
           # Find and kill the process running npm start
           pkill -f "npm run app:start"
