--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -23,9 +23,10 @@ jobs:
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           cd ${{ secrets.VPS_PATH }}
           git stash
+          git pull
           eval "$(fnm env --use-on-cd)"
-          echo "${{secrets.SSH_PRIVATE_KEY}}"
           /home/${{ secrets.VPS_USER }}/.local/share/fnm/fnm use 20
+          /home/${{ secrets.VPS_USER }}/.local/share/fnm/fnm list
           # Find and kill the process running npm start
           pkill -f "npm run app:start"
           git pull origin main
