--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -24,8 +24,12 @@ jobs:
         ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
           cd ${{ secrets.VPS_PATH }}
           git stash
-          source /home/${{ secrets.VPS_USER }}/.bashrc
+
           /home/${{ secrets.VPS_USER }}/.local/share/fnm/fnm use 20
+
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
+
           # Find and kill the process running npm start
           pkill -f "npm run api:start"
           git pull origin main
