Move to Prisma, Domains working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
     "noUnusedParameters": false,
 
     // Vite takes care of building everything, not tsc.
-    "noEmit": true
+    "noEmit": true,
+
+    "noImplicitAny": true,
+    "strictNullChecks": true
   }
 }
