--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@dotenvx/dotenvx": "^0.44.0",
     "@epic-web/remember": "^1.0.2",
     "@hookform/resolvers": "^3.3.4",
-    "@libsql/client": "^0.6.0",
+    "@libsql/client": "^0.6.2",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
     "@paralleldrive/cuid2": "^2.2.2",
     "@planetscale/database": "^1.18.0",
+    "@prisma/adapter-libsql": "^5.14.0",
     "@prisma/client": "5.14.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
