--- a/Dockerfile.migrate
+++ b/Dockerfile.migrate
@@ -4,14 +4,6 @@ FROM node:20
 # Create app directory
 WORKDIR /usr/src/app
 
-
-
-# Install Bun and configure PATH
-RUN curl -fsSL https://bun.sh/install | bash
-ENV BUN_INSTALL="/root/.bun"
-ENV PATH="$BUN_INSTALL/bin:$PATH"
-RUN bun --version
-
 # Install app dependencies
 COPY package*.json ./
 RUN npm install
@@ -20,4 +12,4 @@ RUN npm install
 COPY . .
 
 # Command to run the migrations
-CMD ["npm", "run", "db:migrate"]
+CMD ["npm", "prisma", "db", "push"]
