--- a/Dockerfile.migrate
+++ b/Dockerfile.migrate
@@ -1,15 +1,15 @@
-# Use the official Node.js image
-FROM node:20
-
-# Create app directory
-WORKDIR /usr/src/app
-
-# Install app dependencies
-COPY package*.json ./
-RUN npm install
-
-# Bundle app source
-COPY . .
-
-# Command to run the migrations
-CMD ["npm", "prisma", "db", "push"]
+# # Use the official Node.js image
+# FROM node:20
+#
+# # Create app directory
+# WORKDIR /usr/src/app
+#
+# # Install app dependencies
+# COPY package*.json ./
+# RUN npm install
+#
+# # Bundle app source
+# COPY . .
+#
+# # Command to run the migrations
+# CMD ["npm", "prisma", "db", "push"]
