Add mailbox setup route and helper functions

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "api:dev": "bun run --hot ./backend/index.ts",
-    "api:start": "bun ./backend/index.ts",
+    "api:dev": "tsx watch src/index.ts",
+    "api:bun:dev": "bun run --hot ./backend/index.ts",
+    "api:start": "npx tsx backend/index.ts",
     "app:build": "remix vite:build",
     "app:dev": "remix vite:dev --port 3000 --host",
     "app:start": "remix-serve ./build/server/index.js --port 3000",
@@ -23,6 +24,9 @@
     "@conform-to/zod": "^1.1.4",
     "@dotenvx/dotenvx": "^0.44.1",
     "@epic-web/remember": "^1.1.0",
+    "@hono/client": "^0.0.3",
+    "@hono/node-server": "^1.11.2",
+    "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
     "@libsql/client": "^0.6.2",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
@@ -56,7 +60,7 @@
     "@tiptap/starter-kit": "^2.4.0",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
-    "@trpc/server": "^10.45.2",
+    "@trpc/server": "^11.0.0-rc.401",
     "arctic": "^1.9.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
@@ -81,11 +85,13 @@
     "mel-spintax": "^1.0.4",
     "node-cron": "^3.0.3",
     "node-spintax": "^1.0.4",
+    "node-ssh": "^13.2.0",
     "nodemailer": "^6.9.13",
     "oslo": "^1.2.0",
     "papaparse": "^5.4.1",
     "postgres": "^3.4.4",
     "prisma": "^5.15.0",
+    "puppeteer": "^22.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
@@ -98,10 +104,10 @@
     "rword": "^3.2.1",
     "simple-xml-to-json": "^1.2.2",
     "sonner": "^1.4.41",
+    "ssh2": "^1.15.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
     "zod": "^3.23.8",
     "zodix": "^0.4.4"
   },
@@ -116,6 +122,7 @@
     "@types/pg": "^8.11.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/ssh2": "^1.15.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "bun-types": "^1.1.12",
@@ -131,6 +138,8 @@
     "prettier": "^3.3.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "latest",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.15.1",
     "typescript": "^5.4.5",
     "vite": "^5.2.12",
     "vite-tsconfig-paths": "^4.3.2",
