--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -15,7 +15,7 @@ RUN bun --version
 
 # Install app dependencies
 COPY package*.json ./
-RUN npm install
+RUN bun install
 
 # Bundle app source
 COPY . .
