--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "app:dev": "remix vite:dev --port 3000 --host",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "api:dev": "tsx watch src/backend/index.ts",
+    "api:start": "tsx src/backend/index.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.11.4",
@@ -18,6 +20,7 @@
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -27,11 +30,15 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.1",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@t3-oss/env-core": "^0.10.1",
+    "@types/node-cron": "^3.0.11",
     "@types/object-hash": "^3.0.6",
+    "@types/shell-escape": "^0.2.3",
+    "@types/whois-json": "^2.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
@@ -40,18 +47,24 @@
     "isbot": "^4.1.0",
     "lucide-react": "^0.396.0",
     "next-themes": "^0.3.0",
+    "node-cron": "^3.0.3",
+    "node-ssh": "^13.2.0",
     "object-hash": "^3.0.0",
     "prisma": "^5.15.0",
+    "promisify-child-process": "^4.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "remix-themes": "^1.3.1",
     "remix-utils": "^7.6.0",
+    "shell-escape": "^0.2.0",
     "simple-xml-to-json": "^1.2.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "whois-json": "^2.0.4",
+    "whoiser": "^1.17.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
