--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix vite:build",
+    "app:build": "tsc && remix vite:build",
     "app:dev": "remix vite:dev --port 3000 --host",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
@@ -30,6 +30,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.1",
     "@remix-run/node": "^2.9.2",
     "@remix-run/react": "^2.9.2",
@@ -41,6 +42,7 @@
     "@types/whois-json": "^2.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dnsimple": "^7.4.0",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "hono": "^4.4.7",
@@ -52,6 +54,7 @@
     "object-hash": "^3.0.0",
     "prisma": "^5.15.0",
     "promisify-child-process": "^4.1.2",
+    "puppeteer": "^22.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
