--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "@t3-oss/env-core": "^0.10.1",
+    "@tanstack/react-table": "^8.19.2",
     "@types/node-cron": "^3.0.11",
     "@types/object-hash": "^3.0.6",
     "@types/shell-escape": "^0.2.3",
