--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dnsimple": "^7.4.0",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "hono": "^4.4.7",
