Add admin panel to see mailbox status

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@remix-run/serve": "^2.9.2",
     "@t3-oss/env-core": "^0.10.1",
     "@tanstack/react-table": "^8.19.2",
+    "@types/ip6addr": "^0.2.6",
     "@types/node-cron": "^3.0.11",
     "@types/node-ssh": "^7.0.6",
     "@types/nodemailer": "^6.4.15",
@@ -53,6 +54,7 @@
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
     "hono": "^4.4.7",
+    "ip6addr": "^0.2.5",
     "isbot": "^4.1.0",
     "jotai": "^2.9.0",
     "lucide-react": "^0.396.0",
